# Zephyrion-Engine

./: .gitignore  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/cobalt/: App.cpp  App.hpp  pch.cpp  pch.hpp
engine/cobalt/configs/: AppConfig.hpp  WindowConfig.hpp
engine/cobalt/core/: Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
engine/cobalt/low/: BuilderBase.hpp  DetachedProcess.hpp  DetatchedProcess.cpp  UuidIdentifier.hpp
engine/cobalt/simple_types/: Bimap.hpp  Bounds.cpp  Bounds.hpp  Color.cpp  Color.hpp  Rectangle.cpp  Rectangle.hpp  Vector2.cpp  Vector2.hpp
engine/cobalt/utils/: Colors.hpp  Enums.hpp  Helpers.hpp  Macros.hpp  Unions.hpp  Util.hpp
engine/cobalt/utils/translations/: EnumTranslations.hpp
engine/zephyrion/: App.cpp  App.hpp  pch.cpp  pch.hpp
engine/zephyrion/configs/: AppConfig.hpp  ImGuiConfig.hpp  ImguiConfig.hpp  WindowConfig.hpp
engine/zephyrion/core/: IO.cpp  IO.hpp  ImGuiHandler.cpp  ImGuiHandler.hpp  ImguiHandler.cpp  ImguiHandler.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  RendererDevice.cpp  RendererDevice.hpp  Window.cpp  Window.hpp
engine/zephyrion/core/renderers/: MetalHandler.cpp  MetalHandler.hpp  OpenGLHandler.cpp  OpenGLHandler.hpp  VulkanHandler.cpp  VulkanHandler.hpp
engine/zephyrion/low/: BuilderBase.hpp  DetachedProcess.hpp  DetatchedProcess.cpp  UuidIdentifier.hpp
engine/zephyrion/simple_types/: Bimap.hpp  Bounds.cpp  Bounds.hpp  Color.cpp  Color.hpp  QueueApplier.cpp  QueueApplier.hpp  Rectangle.cpp  Rectangle.hpp  Vector2.cpp  Vector2.hpp
engine/zephyrion/translations/: EnumTranslations.hpp
engine/zephyrion/utils/: AdditionalFlags.txt  Colors.hpp  Enums.hpp  Global.hpp  Macros.hpp  Unions.hpp  Util.hpp
engine/zephyrion/utils/translations/: EnumTranslations.hpp
project/: CMakeLists.txt
project/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
